<resources>
    <string name="app_name">Ideas App (For Mobile Developers)</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="app_idea">APP IDEA</string>
    <string name="app_idea_hint">Enter core ideas of the app</string>
    <string name="functionality">FUNCTIONALITY</string>
    <string name="functionality_hint">What does the app do?</string>
    <string name="todo">//TODO</string>
    <string name="add_todo_hint">Add a new task to do</string>
    <string name="add_todo">add todo</string>
    <string name="app_name_hint">Please enter app name</string>
    <string name="welcome_login">Welcome, please login below</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="login">Login</string>
    <string name="please_enter_details">Please enter your details carefully as they would be required for the login process</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="image_displayed">Image displayed</string>
    <string name="go_back">go back</string>
    <string name="idea_image">Idea image</string>
    <string name="developer_picture">Developer\'s picture</string>
    <string name="bobby_utulu">Bobby Utulu</string>
    <string name="about_developer">Android developer | Tech enthusiast</string>
    <string name="username">Username</string>
    <string name="currently_working_on">Currently working on x apps</string>
    <string name="todo_completed">Todo completed</string>
    <string name="delete_todo">delete Todo</string>
    <string name="image_directory_path">/data/user/0/com.appsbygreatness.ideasappformobiledevelopers/app_Images</string>
</resources>
