<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:importantForAutofill="noExcludeDescendants"
    android:layout_height="match_parent"
    android:background="?attr/activityBackgroundTint"
    tools:context=".activities.LoginActivity">


    <TextView
        android:id="@+id/helloText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:text="@string/welcome_login"
        android:textColor="?attr/primaryTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline11"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_round"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_password"
        android:gravity="center"
        android:inputType="numberPassword"
        android:paddingStart="5dp"
        android:paddingEnd="25dp"
        android:textSize="20sp"
        android:textColor="#353535"
        app:layout_constraintBottom_toTopOf="@+id/passwordKeypadLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline12"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:id="@+id/passwordKeypadLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="1"
                android:text="@string/_1"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="2"
                android:text="@string/_2"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="3"
                android:text="@string/_3"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="4"
                android:text="@string/_4"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="5"
                android:text="@string/_5"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="6"
                android:text="@string/_6"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="7"
                android:text="@string/_7"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="8"
                android:text="@string/_8"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="9"
                android:text="@string/_9"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:tag="fingerprint"
                android:onClick="onClick"
                android:backgroundTint="?attr/primaryTextColor"
                android:background="@drawable/ic_fingerprint"
                tools:ignore="ButtonStyle,InefficientWeight" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:onClick="onClick"
                android:tag="0"
                android:text="@string/_0"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/login_button_bg"
                android:drawableStart="@drawable/ic_backspace"
                android:onClick="onClick"
                android:paddingStart="14dp"
                android:paddingEnd="0dp"
                android:tag="delete"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button_round"
        android:text="@string/login"
        android:textColor="#353535"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>