<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewIdea">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAutofill="noExcludeDescendants"
        android:background="?attr/activityBackgroundTint"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/newAppbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?appBarColor"/>
        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/newAppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:hint="@string/app_name_hint"
                    android:inputType="textCapWords"
                    android:backgroundTint="?attr/editTextBackgroundColor"
                    android:minHeight="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"/>



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/newRV"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:orientation="horizontal"
                        tools:listitem="@layout/card_image_rv"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                    </androidx.recyclerview.widget.RecyclerView>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/newImportImageFAB"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginTop="130dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_import_image"
                        android:backgroundTint="?attr/editTextBackgroundColor"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/app_idea"
                    android:textColor="?attr/primaryTextColor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/newAppIdea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="top|start"
                    android:hint="@string/app_idea_hint"
                    android:inputType="textCapSentences|textMultiLine|textLongMessage"
                    android:minHeight="100dp"
                    android:padding="10dp"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/functionality"
                    android:textColor="?attr/primaryTextColor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/newFunctionality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="top|start"
                    android:hint="@string/functionality_hint"
                    android:inputType="textCapSentences|textMultiLine|textLongMessage"
                    android:minHeight="100dp"
                    android:padding="10dp"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/todo"
                    android:textColor="?attr/primaryTextColor"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/newTodoRV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@android:color/transparent"
                        android:orientation="vertical"
                        tools:listitem="@layout/todo_card_layout" />
                </RelativeLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <EditText
                        android:id="@+id/newAddTodoET"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/add_todo_bg"
                        android:hint="@string/add_todo_hint"
                        android:inputType="textCapSentences"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/newAddTodoButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageButton
                        android:id="@+id/newAddTodoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/add_todo"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    
    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/newViewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    

</FrameLayout>